--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,13 @@ apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 apply plugin: "org.flywaydb.flyway"
 
+flyway {
+	driver = 'com.mysql.jdbc.Driver'
+	url = 'jdbc:mysql://localhost:3306/employee_db'
+	user = 'root'
+	password = 'root'
+}
+
 repositories {
 	mavenCentral()
 }
